// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shades DOM Renders without incident 1`] = `
<Shades.Provider
  prefixer={true}
  to={
    <span>
      <style
        data-shades=""
      />
    </span>
  }
>
  <Component
    prefixer={true}
    to={
      <span>
        <style
          data-shades=""
        />
      </span>
    }
  >
    <shades.h1
      dark={true}
    >
      <h1
        className="shades-h1-229e27bf4f232311c23181b9c2eaf3fb287c58f6"
      >
        Hello
      </h1>
    </shades.h1>
  </Component>
</Shades.Provider>
`;

exports[`Shades DOM allows extending multiple generic components 1`] = `
".shades-a-59a41300b6cf1bae2002c77fd3323a18d3ce4264 {
  font-size: 12px;
  color: blue;
}

.shades-a-59a41300b6cf1bae2002c77fd3323a18d3ce4264:hover {
  border: 1px solid #ccc;
  text-decoration: underline;
}"
`;

exports[`Shades DOM allows extending multiple generic components 2`] = `
".shades-a-e96f6fb466588b3482c64353f2ecf45dec020732 {
  font-size: 12px;
  color: red;
}

.shades-a-e96f6fb466588b3482c64353f2ecf45dec020732:hover {
  border: 1px solid #ccc;
  -webkit-text-decoration: dotted;
  text-decoration: dotted;
}"
`;

exports[`Shades DOM properly merges extended style rules 1`] = `
".shades-span-c7d26f766002d615e35b6c474bb80cfbcbfac5df {
  background: black;
  border: 2px solid purple;
  color: white;
  font-weight: 600;
  text-transform: uppercase;
}

.shades-span-c7d26f766002d615e35b6c474bb80cfbcbfac5df:hover {
  text-decoration: underline;
  border-color: green;
}"
`;

exports[`Shades DOM renders a block matcher without incident 1`] = `
<Shades.Provider
  prefixer={true}
  to={
    <span>
      <style
        data-shades=""
      />
    </span>
  }
>
  <Component
    prefixer={true}
    to={
      <span>
        <style
          data-shades=""
        />
      </span>
    }
  >
    <shades.a
      dark={true}
    >
      <a
        className="shades-a-2e5a42365d82c7afb910df11f4f4a210fd7b6a61"
      >
        Hello
      </a>
    </shades.a>
  </Component>
</Shades.Provider>
`;

exports[`Shades DOM renders a block matcher without incident 2`] = `
<Shades.Provider
  prefixer={true}
  to={
    <span>
      <style
        data-shades=""
      />
    </span>
  }
>
  <Component
    prefixer={true}
    to={
      <span>
        <style
          data-shades=""
        />
      </span>
    }
  >
    <shades.a>
      <a
        className="shades-a-04e364fd62e2ed558a4f6cf657ba7f4287a09c02"
      >
        No Props!
      </a>
    </shades.a>
  </Component>
</Shades.Provider>
`;

exports[`Shades DOM should allow styles to apply to custom components 1`] = `
<Shades.Provider
  prefixer={true}
  to={
    <span>
      <style
        data-shades=""
      />
    </span>
  }
>
  <Component
    prefixer={true}
    to={
      <span>
        <style
          data-shades=""
        />
      </span>
    }
  >
    <shades.generic>
      <Component
        className="shades-generic-14ac31c0dced087664878a551157de18d7788d96"
      >
        <div
          className="shades-generic-14ac31c0dced087664878a551157de18d7788d96"
        >
          Hello this is a test
        </div>
      </Component>
    </shades.generic>
  </Component>
</Shades.Provider>
`;
